# lightsplade

./: .gitignore  compute_idf.py  encode_collection.py  encode_collection_raw.py  evaluare-sparse.py  evaluate-bm25.py  evaluate-sparse.py  index_bm25.py  inference.py  post_encode_collection_raw.py  pyproject.toml  remap_tokens.py  spladev3lexical.ipynb  upload_sparse.py
experiments/.ipynb_checkpoints/: 03-bge-m3-evals-checkpoint.ipynb
experiments/bge-m3/: 01-create-bge-m3.ipynb  02-recombined-bge-m3.ipynb  03-bge-m3-evals.ipynb  07-recombined-bge-m3.ipynb  bge_m3_retoken_reconstruct_bpe_rescore_False.json  bge_m3_retoken_reconstruct_bpe_rescore_True.json  bge_m3_retoken_reconstruct_sentence_piece_rescore_False.json  bge_m3_retoken_reconstruct_sentence_piece_rescore_True.json  remap_tokens.py
experiments/misc/: neural-cherche.ipynb
nbs/: 01-create-spladev3lexical-with-doc-expansion.ipynb  01-create-spladev3lexical.ipynb  02-scored-run.ipynb  03-bge-m3-evals.ipynb  03-evals.ipynb  04-recombined-tokenizer.ipynb  05-attention-onnx.ipynb  06-create-bge-m3.ipynb  07-recombined-bge-m3.ipynb  09-bge-m3-improved.ipynb  bge-m3-lexical.run.json  bge-m3-retokenize-rescore.run.json  bge-m3-sentence-piece-pair-rescore.run.json  bge-m3-sentence-piece-retokenizer.run.json  create-spladev3lexical.ipynb  embed-fiqa.ipynb  lexical-retokenize.run.json  msmarco-expansion.ipynb  neural-cherche.ipynb  qdrant_sparse_tools.py  remap_tokens.py  retokenize.py  sample-run.ipynb  splade-evals.ipynb  splade-lexical-retokenize-rescore.run.json  splade-v3-lexical.run.json
(+4 files in other folders)
