[tool.poetry]
name = "lightsplade"
version = "0.1.0"
description = ""
authors = ["Nirant Kasliwal <nirant.bits@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9,<=3.13"
tantivy = "^0.21.0"
spacy = "^3.7.4"
modal = "^0.62.63"
datasets = "^2.18.0"
nltk = "^3.8.1"
evaluate = "^0.4.1"
trectools = "^0.0.49"
python-dotenv = "^1.0.1"
qdrant-client = "^1.9.0"
tokenizers = "^0.19.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ruff = ">=0.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
